...
                    android:textColor="@color/black"/>
                <EditText
                    android:id="@+id/create_post_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <EditText
                    android:id="@+id/create_post_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...

                <Spinner
                    android:id="@+id/create_post_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Spinner
                    android:id="@+id/create_post_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/create_post_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                    android:text="Select a location" />
                <TextView
                    android:id="@+id/choose_location_view"
                    android:layout_gravity="center"
                    android:gravity="center"
...

                <Button
                    android:id="@+id/create_post_incMaxPortions"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
...

                <EditText
                    android:id="@+id/create_post_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...

                <Button
                    android:id="@+id/create_post_startDate_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="Select Start Date"
                    android:textColor="@color/white" />

...

                <Button
                    android:id="@+id/create_post_startTime_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="Select Start Time"
                    android:textColor="@color/white" />

...

                <Button
                    android:id="@+id/create_post_endDate_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="Select End Date"
                    android:textColor="@color/white" />

...

                <Button
                    android:id="@+id/create_post_endTime_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="Select End Time"
                    android:textColor="@color/white" />

...

                <Button
                    android:id="@+id/camera_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
        android:layout_gravity="bottom|right"
        android:src="@drawable/send_white"
        android:id="@+id/create_post"/>

</LinearLayout>
...
